snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/maven-metadata.xml.md5
e58ebf325d0e6727fcabcb7962eecb93